(HDS-2358) fix Link styled as a button text align-issue

--- a/packages/core/src/components/button/button.css
+++ b/packages/core/src/components/button/button.css
@@ -58,6 +58,7 @@
   overflow-wrap: anywhere;
   padding: var(--padding);
   position: relative;
+  text-align: center;
   text-decoration: none;
   text-transform: none;
   vertical-align: top;
